--- a/templates/parser/kinoogo_list.html
+++ b/templates/parser/kinoogo_list.html
@@ -4,7 +4,7 @@
         <h1>{{ i.title }}</h1>
         <img src="{{ i.image }}" alt="" width="400" height="300">
         <h1>{{ i.description }}</h1>
-        <a href="{{ i.watch_online }}"></a>
+        <a href="{{ i.watch_online }}">смотреть онлайн</a>
     </li>
     <hr><hr><hr>
     {% endfor %}
