--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -51,6 +51,27 @@
                 <li class="nav-item">
                     <a class="nav-link enable" href="{% url 'kinoogo_list' %}" style="color: yellow;">Другие книги</a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link enable" href="{% url 'recipe_list' %}" style="color: yellow;">Рецепты</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link enable" href="{% url 'createRecipe' %}" style="color: yellow;">Добавить рецепт</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link enable" href="{% url 'createIngredient' %}" style="color: yellow;">Добавить ингредиент</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link enable" href="{% url 'all_collection' %}" style="color: yellow;">Коллекции</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link enable" href="{% url 'createCollection' %}" style="color: yellow;">Добавить коллекцию</a>
+                </li>
+
             </ul>
              <form action="{% url 'search' %}" method="GET" class="d-flex" role="search">
                 <input class="form-control me-2"type="text" name="q" type="search" placeholder="Поиск" aria-label="Поиск">
