--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -65,6 +65,10 @@
                 </li>
 
                 <li class="nav-item">
+                    <a class="nav-link enable" href="{% url 'ingredient_list' %}" style="color: yellow;">Ингредиенты</a>
+                </li>
+
+                <li class="nav-item">
                     <a class="nav-link enable" href="{% url 'all_collection' %}" style="color: yellow;">Коллекции</a>
                 </li>
 
